// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package io.vertx.grpcweb;

service TestService {
  rpc EmptyCall(Empty) returns (Empty);
  rpc UnaryCall(EchoRequest) returns (EchoResponse);
  rpc StreamingCall(StreamingRequest) returns (stream StreamingResponse);
}

service UnimplementedService {
  rpc UnimplementedCall(Empty) returns (Empty); // Do not implement
}

message Empty {}

message EchoRequest {
  string payload = 1;
}

message EchoResponse {
  string payload = 1;
}

message StreamingRequest {
  repeated int32 response_size = 1;
}

message StreamingResponse {
  string payload = 1;
}
